Add _MSVC label to CMakeList

--- a/ASREp/ASREcpp/src/CMakeLists.txt
+++ b/ASREp/ASREcpp/src/CMakeLists.txt
@@ -37,6 +37,7 @@ IF(MSVC AND "${CMAKE_VS_PLATFORM_NAME}" MATCHES "(x64)")
     message("   ************************************")
     target_compile_definitions(ASRElibTimoBeam PRIVATE _MSVC)
     target_compile_definitions(ASRElib2DFrame PRIVATE _MSVC)
+    target_compile_definitions(ASRElib3DSolid PRIVATE _MSVC)
     # Define the dir to install the compiled dll
     install( TARGETS ASRElibTimoBeam DESTINATION "${parent_dir}/bin/win32")
     install( TARGETS ASRElib2DFrame DESTINATION "${parent_dir}/bin/win32")
@@ -57,6 +58,7 @@ ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     message("   ************************************")
     target_compile_definitions(ASRElibTimoBeam PRIVATE _GCC)
     target_compile_definitions(ASRElib2DFrame PRIVATE _GCC)
+    target_compile_definitions(ASRElib3DSolid PRIVATE _GCC)
     IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
         message(STATUS "Running on macOS")
         # if(CMAKE_C_COMPILER_TARGET MATCHES "x86_64")
